@@ -261,7 +261,6 @@ assign("as.numeric", get("as.double", envir = .GenericArgsEnv),
 matrix(c("!", "hexmode",
          "!", "octmode",
          "$", "DLLInfo",
-         "$", "data.frame",
          "$", "package_version",
          "$<-", "data.frame",
          "&", "hexmode",
