@@ -122,8 +122,8 @@ List of 2
 +     "\n\t starting with 'is.' :\t  ",
 +     sum(grepl("^is\\.", ls.base[base.is.f])), "\n", sep = "")
 
-Number of all base objects:	1343
-Number of functions from these:	1300
+Number of all base objects:	1342
+Number of functions from these:	1299
 	 starting with 'is.' :	  50
 
 > ## R ver.| #{is*()}
