@@ -1,7 +1,7 @@
 
-R Under development (unstable) (2019-01-24 r76008) -- "Unsuffered Consequences"
+R Under development (unstable) (2019-02-04 r76055) -- "Unsuffered Consequences"
 Copyright (C) 2019 The R Foundation for Statistical Computing
-Platform: x86_64-pc-linux-gnu (64-bit)
+Platform: x86_64-apple-darwin17.7.0 (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -3247,16 +3247,16 @@ Error in `[.data.frame`(x, 1, c("a", "c")) : undefined columns selected
 > meth2gen <- function(cl)
 +     noquote(sub(paste("\\.",cl,"$",sep=""),"", c(.S3methods(class = cl))))
 > meth2gen("data.frame")
- [1] $             $<-           Math          Ops           Summary      
- [6] [             [<-           [[            [[<-          aggregate    
-[11] anyDuplicated as.data.frame as.list       as.matrix     by           
-[16] cbind         dim           dimnames      dimnames<-    droplevels   
-[21] duplicated    edit          format        formula       head         
-[26] is.na         merge         na.exclude    na.omit       plot         
-[31] print         prompt        rbind         row.names     row.names<-  
-[36] rowsum        split         split<-       stack         str          
-[41] subset        summary       t             tail          transform    
-[46] type.convert  unique        unstack       within       
+ [1] $<-           Math          Ops           Summary       [            
+ [6] [<-           [[            [[<-          aggregate     anyDuplicated
+[11] as.data.frame as.list       as.matrix     by            cbind        
+[16] dim           dimnames      dimnames<-    droplevels    duplicated   
+[21] edit          format        formula       head          is.na        
+[26] merge         na.exclude    na.omit       plot          print        
+[31] prompt        rbind         row.names     row.names<-   rowsum       
+[36] split         split<-       stack         str           subset       
+[41] summary       t             tail          transform     type.convert 
+[46] unique        unstack       within       
 > meth2gen("dendrogram")
  [1] [[            as.dendrogram as.hclust     cophenetic    cut          
  [6] labels        merge         nobs          plot          print        
@@ -6348,7 +6348,7 @@ function(given = NULL) {
     if (is.null(given)) callObj$default <- TRUE
     callObj
 }
-<bytecode: 0x4583fb8>
+<bytecode: 0x7f8a69202658>
 > print(foo, useSource = FALSE)
 function (given = NULL) 
 {
@@ -6359,7 +6359,7 @@ function (given = NULL)
         callObj$default <- TRUE
     callObj
 }
-<bytecode: 0x4583fb8>
+<bytecode: 0x7f8a69202658>
 > attr(foo, "srcref") <- NULL
 > foo
 function (given = NULL) 
@@ -6371,7 +6371,7 @@ function (given = NULL)
         callObj$default <- TRUE
     callObj
 }
-<bytecode: 0x4583fb8>
+<bytecode: 0x7f8a69202658>
 > (f <- structure(function(){}, note = "just a note",
 +                 yada = function() "not the same"))
 function(){}
